Centered QR code component in body and  adjusted colors, text styles, spacing according to figma file

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       />
 
       <figcaption class="card-content">
-        <span class="card-content-heading">
+        <h3 class="card-content-heading">
           Improve your front-end skills by building projects
-        </span>
+        </h3>
 
         <p class="card-content-text">
           Scan the QR code to visit Frontend Mentor and take your coding skills
