--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <figure class="qr-code-card">
+    <div class="qr-code-card">
       <img
         class="card-img"
         src="images/image-qr-code.png"
         alt="QR code to Frontend Mentor website"
       />
 
-      <figcaption class="card-content">
+      <div class="card-content">
         <h3 class="card-content-heading">
           Improve your front-end skills by building projects
         </h3>
@@ -45,7 +45,7 @@
           Scan the QR code to visit Frontend Mentor and take your coding skills
           to the next level
         </p>
-      </figcaption>
-    </figure>
+      </div>
+    </div>
   </body>
 </html>
